# marrmotflow

./: .gitignore  .gitignore.local  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLI_DOCUMENTATION.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: .gitkeep
docs/api_reference/: core.rst  default_dicts.rst  index.rst  templating.rst
docs/examples/: basic_workflow.rst  climate_change_assessment.rst  index.rst  multi_model_comparison.rst  regional_analysis.rst
docs/user_guide/: data_preparation.rst  forcing_data.rst  index.rst  model_configuration.rst  output_handling.rst  pet_calculation.rst  templating.rst  workflow_creation.rst
examples/cli_example/: README.md  workflow_config.json
src/marrmotflow/: __init__.py  _default_dicts.py  cli.py  core.py  templating.py
src/marrmotflow/templates/: marrmot_models.m.jinja
tests/: test_cli.py  test_core.py
